--- a/docs/docusaurus/src/css/custom.css
+++ b/docs/docusaurus/src/css/custom.css
@@ -383,7 +383,7 @@ a.navbar__item.navbar__link{
 /* 기본 리스트 스타일 제거 */
 .markdown ul {
   list-style: none;
-  padding-left: 3em; /* 마커 공간 확보 */
+  /* padding-left: 3em; !* 마커 공간 확보 *! */
   /* padding-top: 1rem; */
   /* padding-bottom: 1rem; */
   /* margin-top: 2rem; */
@@ -393,12 +393,13 @@ a.navbar__item.navbar__link{
 }
 
 /* 각 리스트 항목 앞에 ▸ 마커 추가 */
+/*  마커에 대해서 설정을 바꿔줘야한다. 공백이 마음에 안듦 */
 .markdown ul li::before {
   content: '▸';
   color: #007acc; /* 마커 색상 (원하는 색상으로 변경 가능) */
   /* display: inline-block; */
-  width: 1em; /* 마커와 텍스트 간의 간격 조정 */
-  margin-left: -1.5em; /* 마커 위치 조정 */
+  width: 1rem; /* 마커와 텍스트 간의 간격 조정 */
+  /* margin-left: -1.5em; !* 마커 위치 조정 *! */
 }
 
 .markdown p {
