[FE][Feat] 지도와 캔버스 연동 및 완성
- 지도와 캔버스 연동
- 컴퓨터에서 마우스 이벤트로 이동, 줌인/줌아웃 기능 구현
- 휴대폰에서 터치 이벤트로 이동, 줌인/줌아웃 기능 구현
- 캔버스 출발지 마커, 도착지 마커, 경로 그리기 기능 적용
- 변수 및 타입 파일 분리

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+
+.disable-drag {
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none
+}
