--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -63,3 +63,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+span, a, img {
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none
+}
