--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 #root {
   touch-action: pan-y;
+  font-family: Pretendard, 'Pretendard Variable', sans-serif;
 }
 
 .logo {
@@ -43,4 +44,30 @@
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  z-index: 100000;
+}
+
+.message {
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 3;
+  display: flex;
+  flex-direction: column;
+  span {
+    line-height: 1.5;
+    font-size: 0.8rem;
+  }
 }
