--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,10 +66,12 @@
   line-height: 3;
   display: flex;
   flex-direction: column;
+
   span {
     line-height: 1.5;
     font-size: 0.8rem;
-    
+  }
+}
 .spinner {
   width: 3rem;
   height: 3rem;
