[FE][Feat] #301 : font 라이브러리 제거 및 콘솔 제거

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 #root {
   touch-action: pan-y;
-  font-family: Pretendard, 'Pretendard Variable', sans-serif;
+  font-family: Pretendard, 'Pretendard Variable', sans-serif !important;
 }
 
 .logo {
@@ -40,10 +40,10 @@
 }
 
 .disable-drag {
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
-  user-select:none
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .overlay {
