[FE][Fix] #433 : 일부 ios에서 터치 이벤트 제대로 동작하지 않는 문제 해결
- 일부 ios(아이폰 12)에서 터치 이벤트 제대로 동작하지 않는 문제 해결
- 아이폰 12 환경에서 테스트

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,6 +3,14 @@
   font-family: Pretendard, 'Pretendard Variable', sans-serif !important;
 }
 
+@supports (-webkit-touch-callout: none) {
+  #root {
+    touch-action: manipulation; /* Safari 호환 옵션 */
+    overscroll-behavior: none;
+  }
+}
+
+
 .logo {
   height: 6em;
   padding: 1.5em;
